/*
 * $Id: ChangeLog,v 1.655 2003/01/28 22:09:05 lculik Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-01-28 15:11 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/pp/ppcore.c
    ! Fixed a typo.

  * source/rtl/cstr.prg
    ! Fixed 2 missing EXIT in recent optimization to SWITCH.

  * source/vm/hvm.c
    * Minor formatting.

2003-01-28 20:00 UTC-0200 Luiz Rafael Culik <culikr@uol.com.br>
  * source/rdd/dbcmd.c
    ! Fixed initialization of dbLockInfo.itmRecID member to -1 on RLOCK() and FLOCK() functions;
      With RDDADS on Linux this cause an GPF on adslock() member of rddads when trying to compare
      a trash with 0

2003-01-28 08:12 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/pp/ppcore.c
    ! Minor fixed to add numeric support to recent fix to md_strAt() when searching for '.'

2003-01-28 00:27 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/pp/ppcore.c
    ! Minor fixed to recent fix to md_strAt() when searching for '.'

2003-01-27 00:02 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>
  * source/vm/thread.c
    ! Fixed a time slice rollover bug that could have caused miswaits in
      Subscribe() and SubscribeAll() timed waits under linux.
    ! Now the queue of notified object is FIFO instead of LIFO (queue
      instead of stack) as it should presumibily be.
    ! Fixed minor leftovers in SubscribeNow() and NotifyAll() functions


2003-01-27 22:30 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>
  * include/thread.h
  * source/vm/thread.c
    ! Mutex condition-and-wait has moved from macro to function on linux.
    ! Detaching threads just before terminatio on linux to avoid memory leaks
    + Added notification object stack (this resolves the subscribe/notify
      problem when having multiple notify before one thread subscribes).

  * tests/Makefile
    ! Better usage of HB_MT flag
