@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.655 2003/01/28 22:09:05 lculik Exp $
+ * $Id: ChangeLog,v 1.656 2003/01/28 23:12:30 ronpinkas Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,17 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+2003-01-30 04:30 UTC+0700 Andi Jahja <andijahja@harbour-id.net>
+  Again, function declaration matching among those in header files and function
+  bodies to enable creation of MSVC DLL.
+  * include/hbapi.h
+  * include/hbapifs.h
+  * include/hbtrace.h
+  * source/common/hbffind.c
+  * source/common/hbtrace.c
+  * source/rtl/datec.c
+  * source/rtl/dates.c
+  * source/rtl/langapi.c
 
 2003-01-28 15:11 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
   * source/pp/ppcore.c
